parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID statements END opt_function_list
Rule 2     opt_function_list -> function_list
Rule 3     opt_function_list -> empty
Rule 4     function_list -> function_list function_decl
Rule 5     function_list -> function_decl
Rule 6     statements -> statements statement
Rule 7     statements -> statement
Rule 8     statement -> declaration
Rule 9     statement -> assignment
Rule 10    statement -> print_stmt
Rule 11    statement -> read_stmt
Rule 12    statement -> if_stmt
Rule 13    statement -> do_stmt
Rule 14    statement -> labeled_continue
Rule 15    statement -> goto_stmt
Rule 16    statement -> return_stmt
Rule 17    declaration -> INTEGER decl_list
Rule 18    declaration -> REAL decl_list
Rule 19    declaration -> LOGICAL decl_list
Rule 20    decl_list -> decl_list COMMA decl_item
Rule 21    decl_list -> decl_item
Rule 22    decl_item -> ID
Rule 23    decl_item -> ID LPAREN NUMBER RPAREN
Rule 24    assignment -> ID ASSIGN expression
Rule 25    assignment -> array_access ASSIGN expression
Rule 26    print_stmt -> PRINT TIMES COMMA print_list
Rule 27    read_stmt -> READ TIMES COMMA read_list
Rule 28    if_stmt -> IF LPAREN condition RPAREN THEN statements ENDIF
Rule 29    if_stmt -> IF LPAREN condition RPAREN THEN statements ELSE statements ENDIF
Rule 30    do_stmt -> DO NUMBER ID ASSIGN expression COMMA expression do_body_statements labeled_continue
Rule 31    labeled_continue -> NUMBER CONTINUE
Rule 32    goto_stmt -> GOTO NUMBER
Rule 33    return_stmt -> RETURN
Rule 34    type_spec -> INTEGER
Rule 35    type_spec -> REAL
Rule 36    type_spec -> LOGICAL
Rule 37    function_decl -> type_spec FUNCTION ID LPAREN ID RPAREN function_body END
Rule 38    function_body -> function_body function_body_statement
Rule 39    function_body -> function_body_statement
Rule 40    function_body_statement -> declaration
Rule 41    function_body_statement -> assignment
Rule 42    function_body_statement -> return_stmt
Rule 43    read_list -> read_list COMMA read_target
Rule 44    read_list -> read_target
Rule 45    read_target -> ID
Rule 46    read_target -> array_access
Rule 47    do_body_statements -> do_body_statements do_body_statement
Rule 48    do_body_statements -> do_body_statement
Rule 49    do_body_statement -> declaration
Rule 50    do_body_statement -> assignment
Rule 51    do_body_statement -> print_stmt
Rule 52    do_body_statement -> read_stmt
Rule 53    do_body_statement -> if_stmt
Rule 54    do_body_statement -> do_stmt
Rule 55    do_body_statement -> goto_stmt
Rule 56    print_list -> print_list COMMA printable
Rule 57    print_list -> printable
Rule 58    printable -> expression
Rule 59    printable -> STRING
Rule 60    array_access -> ID LPAREN expression RPAREN
Rule 61    expression -> expression PLUS expression
Rule 62    expression -> expression MINUS expression
Rule 63    expression -> expression TIMES expression
Rule 64    expression -> expression DIVIDE expression
Rule 65    expression -> LPAREN expression RPAREN
Rule 66    expression -> NUMBER
Rule 67    expression -> ID
Rule 68    expression -> array_access
Rule 69    expression -> ID LPAREN expression COMMA expression RPAREN
Rule 70    expression -> DOT_TRUE
Rule 71    expression -> DOT_FALSE
Rule 72    condition -> expression DOT_EQ expression
Rule 73    condition -> expression DOT_NE expression
Rule 74    condition -> expression DOT_LT expression
Rule 75    condition -> expression DOT_LE expression
Rule 76    condition -> expression DOT_GT expression
Rule 77    condition -> expression DOT_GE expression
Rule 78    condition -> condition DOT_AND condition
Rule 79    condition -> condition DOT_OR condition
Rule 80    condition -> DOT_NOT condition
Rule 81    condition -> LPAREN condition RPAREN
Rule 82    condition -> expression
Rule 83    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 24 25 30
COMMA                : 20 26 27 30 43 56 69
CONTINUE             : 31
DIVIDE               : 64
DO                   : 30
DOT_AND              : 78
DOT_EQ               : 72
DOT_FALSE            : 71
DOT_GE               : 77
DOT_GT               : 76
DOT_LE               : 75
DOT_LT               : 74
DOT_NE               : 73
DOT_NOT              : 80
DOT_OR               : 79
DOT_TRUE             : 70
ELSE                 : 29
END                  : 1 37
ENDIF                : 28 29
FUNCTION             : 37
GOTO                 : 32
ID                   : 1 22 23 24 30 37 37 45 60 67 69
IF                   : 28 29
INTEGER              : 17 34
LOGICAL              : 19 36
LPAREN               : 23 28 29 37 60 65 69 81
MINUS                : 62
NUMBER               : 23 30 31 32 66
PLUS                 : 61
PRINT                : 26
PROGRAM              : 1
READ                 : 27
REAL                 : 18 35
RETURN               : 33
RPAREN               : 23 28 29 37 60 65 69 81
STRING               : 59
THEN                 : 28 29
TIMES                : 26 27 63
error                : 

Nonterminals, with rules where they appear

array_access         : 25 46 68
assignment           : 9 41 50
condition            : 28 29 78 78 79 79 80 81
decl_item            : 20 21
decl_list            : 17 18 19 20
declaration          : 8 40 49
do_body_statement    : 47 48
do_body_statements   : 30 47
do_stmt              : 13 54
empty                : 3
expression           : 24 25 30 30 58 60 61 61 62 62 63 63 64 64 65 69 69 72 72 73 73 74 74 75 75 76 76 77 77 82
function_body        : 37 38
function_body_statement : 38 39
function_decl        : 4 5
function_list        : 2 4
goto_stmt            : 15 55
if_stmt              : 12 53
labeled_continue     : 14 30
opt_function_list    : 1
print_list           : 26 56
print_stmt           : 10 51
printable            : 56 57
program              : 0
read_list            : 27 43
read_stmt            : 11 52
read_target          : 43 44
return_stmt          : 16 42
statement            : 6 7
statements           : 1 6 28 29 29
type_spec            : 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID statements END opt_function_list

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID statements END opt_function_list

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . statements END opt_function_list
    (6) statements -> . statements statement
    (7) statements -> . statement
    (8) statement -> . declaration
    (9) statement -> . assignment
    (10) statement -> . print_stmt
    (11) statement -> . read_stmt
    (12) statement -> . if_stmt
    (13) statement -> . do_stmt
    (14) statement -> . labeled_continue
    (15) statement -> . goto_stmt
    (16) statement -> . return_stmt
    (17) declaration -> . INTEGER decl_list
    (18) declaration -> . REAL decl_list
    (19) declaration -> . LOGICAL decl_list
    (24) assignment -> . ID ASSIGN expression
    (25) assignment -> . array_access ASSIGN expression
    (26) print_stmt -> . PRINT TIMES COMMA print_list
    (27) read_stmt -> . READ TIMES COMMA read_list
    (28) if_stmt -> . IF LPAREN condition RPAREN THEN statements ENDIF
    (29) if_stmt -> . IF LPAREN condition RPAREN THEN statements ELSE statements ENDIF
    (30) do_stmt -> . DO NUMBER ID ASSIGN expression COMMA expression do_body_statements labeled_continue
    (31) labeled_continue -> . NUMBER CONTINUE
    (32) goto_stmt -> . GOTO NUMBER
    (33) return_stmt -> . RETURN
    (60) array_access -> . ID LPAREN expression RPAREN

    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    LOGICAL         shift and go to state 18
    ID              shift and go to state 4
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    IF              shift and go to state 22
    DO              shift and go to state 23
    NUMBER          shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    statements                     shift and go to state 5
    statement                      shift and go to state 6
    declaration                    shift and go to state 7
    assignment                     shift and go to state 8
    print_stmt                     shift and go to state 9
    read_stmt                      shift and go to state 10
    if_stmt                        shift and go to state 11
    do_stmt                        shift and go to state 12
    labeled_continue               shift and go to state 13
    goto_stmt                      shift and go to state 14
    return_stmt                    shift and go to state 15
    array_access                   shift and go to state 19

state 4

    (24) assignment -> ID . ASSIGN expression
    (60) array_access -> ID . LPAREN expression RPAREN

    ASSIGN          shift and go to state 27
    LPAREN          shift and go to state 28


state 5

    (1) program -> PROGRAM ID statements . END opt_function_list
    (6) statements -> statements . statement
    (8) statement -> . declaration
    (9) statement -> . assignment
    (10) statement -> . print_stmt
    (11) statement -> . read_stmt
    (12) statement -> . if_stmt
    (13) statement -> . do_stmt
    (14) statement -> . labeled_continue
    (15) statement -> . goto_stmt
    (16) statement -> . return_stmt
    (17) declaration -> . INTEGER decl_list
    (18) declaration -> . REAL decl_list
    (19) declaration -> . LOGICAL decl_list
    (24) assignment -> . ID ASSIGN expression
    (25) assignment -> . array_access ASSIGN expression
    (26) print_stmt -> . PRINT TIMES COMMA print_list
    (27) read_stmt -> . READ TIMES COMMA read_list
    (28) if_stmt -> . IF LPAREN condition RPAREN THEN statements ENDIF
    (29) if_stmt -> . IF LPAREN condition RPAREN THEN statements ELSE statements ENDIF
    (30) do_stmt -> . DO NUMBER ID ASSIGN expression COMMA expression do_body_statements labeled_continue
    (31) labeled_continue -> . NUMBER CONTINUE
    (32) goto_stmt -> . GOTO NUMBER
    (33) return_stmt -> . RETURN
    (60) array_access -> . ID LPAREN expression RPAREN

    END             shift and go to state 29
    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    LOGICAL         shift and go to state 18
    ID              shift and go to state 4
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    IF              shift and go to state 22
    DO              shift and go to state 23
    NUMBER          shift and go to state 24
    GOTO            shift and go to state 25
    RETURN          shift and go to state 26

    statement                      shift and go to state 30
    declaration                    shift and go to state 7
    assignment                     shift and go to state 8
    print_stmt                     shift and go to state 9
    read_stmt                      shift and go to state 10
    if_stmt                        shift and go to state 11
    do_stmt                        shift and go to state 12
    labeled_continue               shift and go to state 13
    goto_stmt                      shift and go to state 14
    return_stmt                    shift and go to state 15
    array_access                   shift and go to state 19

state 6

    (7) statements -> statement .

    END             reduce using rule 7 (statements -> statement .)
    INTEGER         reduce using rule 7 (statements -> statement .)
    REAL            reduce using rule 7 (statements -> statement .)
    LOGICAL         reduce using rule 7 (statements -> statement .)
    ID              reduce using rule 7 (statements -> statement .)
    PRINT           reduce using rule 7 (statements -> statement .)
    READ            reduce using rule 7 (statements -> statement .)
    IF              reduce using rule 7 (statements -> statement .)
    DO              reduce using rule 7 (statements -> statement .)
    NUMBER          reduce using rule 7 (statements -> statement .)
    GOTO            reduce using rule 7 (statements -> statement .)
    RETURN          reduce using rule 7 (statements -> statement .)
    ENDIF           reduce using rule 7 (statements -> statement .)
    ELSE            reduce using rule 7 (statements -> statement .)


state 7

    (8) statement -> declaration .

    END             reduce using rule 8 (statement -> declaration .)
    INTEGER         reduce using rule 8 (statement -> declaration .)
    REAL            reduce using rule 8 (statement -> declaration .)
    LOGICAL         reduce using rule 8 (statement -> declaration .)
    ID              reduce using rule 8 (statement -> declaration .)
    PRINT           reduce using rule 8 (statement -> declaration .)
    READ            reduce using rule 8 (statement -> declaration .)
    IF              reduce using rule 8 (statement -> declaration .)
    DO              reduce using rule 8 (statement -> declaration .)
    NUMBER          reduce using rule 8 (statement -> declaration .)
    GOTO            reduce using rule 8 (statement -> declaration .)
    RETURN          reduce using rule 8 (statement -> declaration .)
    ENDIF           reduce using rule 8 (statement -> declaration .)
    ELSE            reduce using rule 8 (statement -> declaration .)


state 8

    (9) statement -> assignment .

    END             reduce using rule 9 (statement -> assignment .)
    INTEGER         reduce using rule 9 (statement -> assignment .)
    REAL            reduce using rule 9 (statement -> assignment .)
    LOGICAL         reduce using rule 9 (statement -> assignment .)
    ID              reduce using rule 9 (statement -> assignment .)
    PRINT           reduce using rule 9 (statement -> assignment .)
    READ            reduce using rule 9 (statement -> assignment .)
    IF              reduce using rule 9 (statement -> assignment .)
    DO              reduce using rule 9 (statement -> assignment .)
    NUMBER          reduce using rule 9 (statement -> assignment .)
    GOTO            reduce using rule 9 (statement -> assignment .)
    RETURN          reduce using rule 9 (statement -> assignment .)
    ENDIF           reduce using rule 9 (statement -> assignment .)
    ELSE            reduce using rule 9 (statement -> assignment .)


state 9

    (10) statement -> print_stmt .

    END             reduce using rule 10 (statement -> print_stmt .)
    INTEGER         reduce using rule 10 (statement -> print_stmt .)
    REAL            reduce using rule 10 (statement -> print_stmt .)
    LOGICAL         reduce using rule 10 (statement -> print_stmt .)
    ID              reduce using rule 10 (statement -> print_stmt .)
    PRINT           reduce using rule 10 (statement -> print_stmt .)
    READ            reduce using rule 10 (statement -> print_stmt .)
    IF              reduce using rule 10 (statement -> print_stmt .)
    DO              reduce using rule 10 (statement -> print_stmt .)
    NUMBER          reduce using rule 10 (statement -> print_stmt .)
    GOTO            reduce using rule 10 (statement -> print_stmt .)
    RETURN          reduce using rule 10 (statement -> print_stmt .)
    ENDIF           reduce using rule 10 (statement -> print_stmt .)
    ELSE            reduce using rule 10 (statement -> print_stmt .)


state 10

    (11) statement -> read_stmt .

    END             reduce using rule 11 (statement -> read_stmt .)
    INTEGER         reduce using rule 11 (statement -> read_stmt .)
    REAL            reduce using rule 11 (statement -> read_stmt .)
    LOGICAL         reduce using rule 11 (statement -> read_stmt .)
    ID              reduce using rule 11 (statement -> read_stmt .)
    PRINT           reduce using rule 11 (statement -> read_stmt .)
    READ            reduce using rule 11 (statement -> read_stmt .)
    IF              reduce using rule 11 (statement -> read_stmt .)
    DO              reduce using rule 11 (statement -> read_stmt .)
    NUMBER          reduce using rule 11 (statement -> read_stmt .)
    GOTO            reduce using rule 11 (statement -> read_stmt .)
    RETURN          reduce using rule 11 (statement -> read_stmt .)
    ENDIF           reduce using rule 11 (statement -> read_stmt .)
    ELSE            reduce using rule 11 (statement -> read_stmt .)


state 11

    (12) statement -> if_stmt .

    END             reduce using rule 12 (statement -> if_stmt .)
    INTEGER         reduce using rule 12 (statement -> if_stmt .)
    REAL            reduce using rule 12 (statement -> if_stmt .)
    LOGICAL         reduce using rule 12 (statement -> if_stmt .)
    ID              reduce using rule 12 (statement -> if_stmt .)
    PRINT           reduce using rule 12 (statement -> if_stmt .)
    READ            reduce using rule 12 (statement -> if_stmt .)
    IF              reduce using rule 12 (statement -> if_stmt .)
    DO              reduce using rule 12 (statement -> if_stmt .)
    NUMBER          reduce using rule 12 (statement -> if_stmt .)
    GOTO            reduce using rule 12 (statement -> if_stmt .)
    RETURN          reduce using rule 12 (statement -> if_stmt .)
    ENDIF           reduce using rule 12 (statement -> if_stmt .)
    ELSE            reduce using rule 12 (statement -> if_stmt .)


state 12

    (13) statement -> do_stmt .

    END             reduce using rule 13 (statement -> do_stmt .)
    INTEGER         reduce using rule 13 (statement -> do_stmt .)
    REAL            reduce using rule 13 (statement -> do_stmt .)
    LOGICAL         reduce using rule 13 (statement -> do_stmt .)
    ID              reduce using rule 13 (statement -> do_stmt .)
    PRINT           reduce using rule 13 (statement -> do_stmt .)
    READ            reduce using rule 13 (statement -> do_stmt .)
    IF              reduce using rule 13 (statement -> do_stmt .)
    DO              reduce using rule 13 (statement -> do_stmt .)
    NUMBER          reduce using rule 13 (statement -> do_stmt .)
    GOTO            reduce using rule 13 (statement -> do_stmt .)
    RETURN          reduce using rule 13 (statement -> do_stmt .)
    ENDIF           reduce using rule 13 (statement -> do_stmt .)
    ELSE            reduce using rule 13 (statement -> do_stmt .)


state 13

    (14) statement -> labeled_continue .

    END             reduce using rule 14 (statement -> labeled_continue .)
    INTEGER         reduce using rule 14 (statement -> labeled_continue .)
    REAL            reduce using rule 14 (statement -> labeled_continue .)
    LOGICAL         reduce using rule 14 (statement -> labeled_continue .)
    ID              reduce using rule 14 (statement -> labeled_continue .)
    PRINT           reduce using rule 14 (statement -> labeled_continue .)
    READ            reduce using rule 14 (statement -> labeled_continue .)
    IF              reduce using rule 14 (statement -> labeled_continue .)
    DO              reduce using rule 14 (statement -> labeled_continue .)
    NUMBER          reduce using rule 14 (statement -> labeled_continue .)
    GOTO            reduce using rule 14 (statement -> labeled_continue .)
    RETURN          reduce using rule 14 (statement -> labeled_continue .)
    ENDIF           reduce using rule 14 (statement -> labeled_continue .)
    ELSE            reduce using rule 14 (statement -> labeled_continue .)


state 14

    (15) statement -> goto_stmt .

    END             reduce using rule 15 (statement -> goto_stmt .)
    INTEGER         reduce using rule 15 (statement -> goto_stmt .)
    REAL            reduce using rule 15 (statement -> goto_stmt .)
    LOGICAL         reduce using rule 15 (statement -> goto_stmt .)
    ID              reduce using rule 15 (statement -> goto_stmt .)
    PRINT           reduce using rule 15 (statement -> goto_stmt .)
    READ            reduce using rule 15 (statement -> goto_stmt .)
    IF              reduce using rule 15 (statement -> goto_stmt .)
    DO              reduce using rule 15 (statement -> goto_stmt .)
    NUMBER          reduce using rule 15 (statement -> goto_stmt .)
    GOTO            reduce using rule 15 (statement -> goto_stmt .)
    RETURN          reduce using rule 15 (statement -> goto_stmt .)
    ENDIF           reduce using rule 15 (statement -> goto_stmt .)
    ELSE            reduce using rule 15 (statement -> goto_stmt .)


state 15

    (16) statement -> return_stmt .

    END             reduce using rule 16 (statement -> return_stmt .)
    INTEGER         reduce using rule 16 (statement -> return_stmt .)
    REAL            reduce using rule 16 (statement -> return_stmt .)
    LOGICAL         reduce using rule 16 (statement -> return_stmt .)
    ID              reduce using rule 16 (statement -> return_stmt .)
    PRINT           reduce using rule 16 (statement -> return_stmt .)
    READ            reduce using rule 16 (statement -> return_stmt .)
    IF              reduce using rule 16 (statement -> return_stmt .)
    DO              reduce using rule 16 (statement -> return_stmt .)
    NUMBER          reduce using rule 16 (statement -> return_stmt .)
    GOTO            reduce using rule 16 (statement -> return_stmt .)
    RETURN          reduce using rule 16 (statement -> return_stmt .)
    ENDIF           reduce using rule 16 (statement -> return_stmt .)
    ELSE            reduce using rule 16 (statement -> return_stmt .)


state 16

    (17) declaration -> INTEGER . decl_list
    (20) decl_list -> . decl_list COMMA decl_item
    (21) decl_list -> . decl_item
    (22) decl_item -> . ID
    (23) decl_item -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 33

    decl_list                      shift and go to state 31
    decl_item                      shift and go to state 32

state 17

    (18) declaration -> REAL . decl_list
    (20) decl_list -> . decl_list COMMA decl_item
    (21) decl_list -> . decl_item
    (22) decl_item -> . ID
    (23) decl_item -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 33

    decl_list                      shift and go to state 34
    decl_item                      shift and go to state 32

state 18

    (19) declaration -> LOGICAL . decl_list
    (20) decl_list -> . decl_list COMMA decl_item
    (21) decl_list -> . decl_item
    (22) decl_item -> . ID
    (23) decl_item -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 33

    decl_list                      shift and go to state 35
    decl_item                      shift and go to state 32

state 19

    (25) assignment -> array_access . ASSIGN expression

    ASSIGN          shift and go to state 36


state 20

    (26) print_stmt -> PRINT . TIMES COMMA print_list

    TIMES           shift and go to state 37


state 21

    (27) read_stmt -> READ . TIMES COMMA read_list

    TIMES           shift and go to state 38


state 22

    (28) if_stmt -> IF . LPAREN condition RPAREN THEN statements ENDIF
    (29) if_stmt -> IF . LPAREN condition RPAREN THEN statements ELSE statements ENDIF

    LPAREN          shift and go to state 39


state 23

    (30) do_stmt -> DO . NUMBER ID ASSIGN expression COMMA expression do_body_statements labeled_continue

    NUMBER          shift and go to state 40


state 24

    (31) labeled_continue -> NUMBER . CONTINUE

    CONTINUE        shift and go to state 41


state 25

    (32) goto_stmt -> GOTO . NUMBER

    NUMBER          shift and go to state 42


state 26

    (33) return_stmt -> RETURN .

    END             reduce using rule 33 (return_stmt -> RETURN .)
    INTEGER         reduce using rule 33 (return_stmt -> RETURN .)
    REAL            reduce using rule 33 (return_stmt -> RETURN .)
    LOGICAL         reduce using rule 33 (return_stmt -> RETURN .)
    ID              reduce using rule 33 (return_stmt -> RETURN .)
    PRINT           reduce using rule 33 (return_stmt -> RETURN .)
    READ            reduce using rule 33 (return_stmt -> RETURN .)
    IF              reduce using rule 33 (return_stmt -> RETURN .)
    DO              reduce using rule 33 (return_stmt -> RETURN .)
    NUMBER          reduce using rule 33 (return_stmt -> RETURN .)
    GOTO            reduce using rule 33 (return_stmt -> RETURN .)
    RETURN          reduce using rule 33 (return_stmt -> RETURN .)
    ENDIF           reduce using rule 33 (return_stmt -> RETURN .)
    ELSE            reduce using rule 33 (return_stmt -> RETURN .)


state 27

    (24) assignment -> ID ASSIGN . expression
    (61) expression -> . expression PLUS expression
    (62) expression -> . expression MINUS expression
    (63) expression -> . expression TIMES expression
    (64) expression -> . expression DIVIDE expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . NUMBER
    (67) expression -> . ID
    (68) expression -> . array_access
    (69) expression -> . ID LPAREN expression COMMA expression RPAREN
    (70) expression -> . DOT_TRUE
    (71) expression -> . DOT_FALSE
    (60) array_access -> . ID LPAREN expression RPAREN

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 43
    DOT_TRUE        shift and go to state 48
    DOT_FALSE       shift and go to state 49

    expression                     shift and go to state 44
    array_access                   shift and go to state 47

state 28

    (60) array_access -> ID LPAREN . expression RPAREN
    (61) expression -> . expression PLUS expression
    (62) expression -> . expression MINUS expression
    (63) expression -> . expression TIMES expression
    (64) expression -> . expression DIVIDE expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . NUMBER
    (67) expression -> . ID
    (68) expression -> . array_access
    (69) expression -> . ID LPAREN expression COMMA expression RPAREN
    (70) expression -> . DOT_TRUE
    (71) expression -> . DOT_FALSE
    (60) array_access -> . ID LPAREN expression RPAREN

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 43
    DOT_TRUE        shift and go to state 48
    DOT_FALSE       shift and go to state 49

    expression                     shift and go to state 50
    array_access                   shift and go to state 47

state 29

    (1) program -> PROGRAM ID statements END . opt_function_list
    (2) opt_function_list -> . function_list
    (3) opt_function_list -> . empty
    (4) function_list -> . function_list function_decl
    (5) function_list -> . function_decl
    (83) empty -> .
    (37) function_decl -> . type_spec FUNCTION ID LPAREN ID RPAREN function_body END
    (34) type_spec -> . INTEGER
    (35) type_spec -> . REAL
    (36) type_spec -> . LOGICAL

    $end            reduce using rule 83 (empty -> .)
    INTEGER         shift and go to state 56
    REAL            shift and go to state 57
    LOGICAL         shift and go to state 58

    opt_function_list              shift and go to state 51
    function_list                  shift and go to state 52
    empty                          shift and go to state 53
    function_decl                  shift and go to state 54
    type_spec                      shift and go to state 55

state 30

    (6) statements -> statements statement .

    END             reduce using rule 6 (statements -> statements statement .)
    INTEGER         reduce using rule 6 (statements -> statements statement .)
    REAL            reduce using rule 6 (statements -> statements statement .)
    LOGICAL         reduce using rule 6 (statements -> statements statement .)
    ID              reduce using rule 6 (statements -> statements statement .)
    PRINT           reduce using rule 6 (statements -> statements statement .)
    READ            reduce using rule 6 (statements -> statements statement .)
    IF              reduce using rule 6 (statements -> statements statement .)
    DO              reduce using rule 6 (statements -> statements statement .)
    NUMBER          reduce using rule 6 (statements -> statements statement .)
    GOTO            reduce using rule 6 (statements -> statements statement .)
    RETURN          reduce using rule 6 (statements -> statements statement .)
    ENDIF           reduce using rule 6 (statements -> statements statement .)
    ELSE            reduce using rule 6 (statements -> statements statement .)


state 31

    (17) declaration -> INTEGER decl_list .
    (20) decl_list -> decl_list . COMMA decl_item

    END             reduce using rule 17 (declaration -> INTEGER decl_list .)
    INTEGER         reduce using rule 17 (declaration -> INTEGER decl_list .)
    REAL            reduce using rule 17 (declaration -> INTEGER decl_list .)
    LOGICAL         reduce using rule 17 (declaration -> INTEGER decl_list .)
    ID              reduce using rule 17 (declaration -> INTEGER decl_list .)
    PRINT           reduce using rule 17 (declaration -> INTEGER decl_list .)
    READ            reduce using rule 17 (declaration -> INTEGER decl_list .)
    IF              reduce using rule 17 (declaration -> INTEGER decl_list .)
    DO              reduce using rule 17 (declaration -> INTEGER decl_list .)
    NUMBER          reduce using rule 17 (declaration -> INTEGER decl_list .)
    GOTO            reduce using rule 17 (declaration -> INTEGER decl_list .)
    RETURN          reduce using rule 17 (declaration -> INTEGER decl_list .)
    ENDIF           reduce using rule 17 (declaration -> INTEGER decl_list .)
    ELSE            reduce using rule 17 (declaration -> INTEGER decl_list .)
    COMMA           shift and go to state 59


state 32

    (21) decl_list -> decl_item .

    COMMA           reduce using rule 21 (decl_list -> decl_item .)
    END             reduce using rule 21 (decl_list -> decl_item .)
    INTEGER         reduce using rule 21 (decl_list -> decl_item .)
    REAL            reduce using rule 21 (decl_list -> decl_item .)
    LOGICAL         reduce using rule 21 (decl_list -> decl_item .)
    ID              reduce using rule 21 (decl_list -> decl_item .)
    PRINT           reduce using rule 21 (decl_list -> decl_item .)
    READ            reduce using rule 21 (decl_list -> decl_item .)
    IF              reduce using rule 21 (decl_list -> decl_item .)
    DO              reduce using rule 21 (decl_list -> decl_item .)
    NUMBER          reduce using rule 21 (decl_list -> decl_item .)
    GOTO            reduce using rule 21 (decl_list -> decl_item .)
    RETURN          reduce using rule 21 (decl_list -> decl_item .)
    ENDIF           reduce using rule 21 (decl_list -> decl_item .)
    ELSE            reduce using rule 21 (decl_list -> decl_item .)


state 33

    (22) decl_item -> ID .
    (23) decl_item -> ID . LPAREN NUMBER RPAREN

    COMMA           reduce using rule 22 (decl_item -> ID .)
    END             reduce using rule 22 (decl_item -> ID .)
    INTEGER         reduce using rule 22 (decl_item -> ID .)
    REAL            reduce using rule 22 (decl_item -> ID .)
    LOGICAL         reduce using rule 22 (decl_item -> ID .)
    ID              reduce using rule 22 (decl_item -> ID .)
    PRINT           reduce using rule 22 (decl_item -> ID .)
    READ            reduce using rule 22 (decl_item -> ID .)
    IF              reduce using rule 22 (decl_item -> ID .)
    DO              reduce using rule 22 (decl_item -> ID .)
    NUMBER          reduce using rule 22 (decl_item -> ID .)
    GOTO            reduce using rule 22 (decl_item -> ID .)
    RETURN          reduce using rule 22 (decl_item -> ID .)
    ENDIF           reduce using rule 22 (decl_item -> ID .)
    ELSE            reduce using rule 22 (decl_item -> ID .)
    LPAREN          shift and go to state 60


state 34

    (18) declaration -> REAL decl_list .
    (20) decl_list -> decl_list . COMMA decl_item

    END             reduce using rule 18 (declaration -> REAL decl_list .)
    INTEGER         reduce using rule 18 (declaration -> REAL decl_list .)
    REAL            reduce using rule 18 (declaration -> REAL decl_list .)
    LOGICAL         reduce using rule 18 (declaration -> REAL decl_list .)
    ID              reduce using rule 18 (declaration -> REAL decl_list .)
    PRINT           reduce using rule 18 (declaration -> REAL decl_list .)
    READ            reduce using rule 18 (declaration -> REAL decl_list .)
    IF              reduce using rule 18 (declaration -> REAL decl_list .)
    DO              reduce using rule 18 (declaration -> REAL decl_list .)
    NUMBER          reduce using rule 18 (declaration -> REAL decl_list .)
    GOTO            reduce using rule 18 (declaration -> REAL decl_list .)
    RETURN          reduce using rule 18 (declaration -> REAL decl_list .)
    ENDIF           reduce using rule 18 (declaration -> REAL decl_list .)
    ELSE            reduce using rule 18 (declaration -> REAL decl_list .)
    COMMA           shift and go to state 59


state 35

    (19) declaration -> LOGICAL decl_list .
    (20) decl_list -> decl_list . COMMA decl_item

    END             reduce using rule 19 (declaration -> LOGICAL decl_list .)
    INTEGER         reduce using rule 19 (declaration -> LOGICAL decl_list .)
    REAL            reduce using rule 19 (declaration -> LOGICAL decl_list .)
    LOGICAL         reduce using rule 19 (declaration -> LOGICAL decl_list .)
    ID              reduce using rule 19 (declaration -> LOGICAL decl_list .)
    PRINT           reduce using rule 19 (declaration -> LOGICAL decl_list .)
    READ            reduce using rule 19 (declaration -> LOGICAL decl_list .)
    IF              reduce using rule 19 (declaration -> LOGICAL decl_list .)
    DO              reduce using rule 19 (declaration -> LOGICAL decl_list .)
    NUMBER          reduce using rule 19 (declaration -> LOGICAL decl_list .)
    GOTO            reduce using rule 19 (declaration -> LOGICAL decl_list .)
    RETURN          reduce using rule 19 (declaration -> LOGICAL decl_list .)
    ENDIF           reduce using rule 19 (declaration -> LOGICAL decl_list .)
    ELSE            reduce using rule 19 (declaration -> LOGICAL decl_list .)
    COMMA           shift and go to state 59


state 36

    (25) assignment -> array_access ASSIGN . expression
    (61) expression -> . expression PLUS expression
    (62) expression -> . expression MINUS expression
    (63) expression -> . expression TIMES expression
    (64) expression -> . expression DIVIDE expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . NUMBER
    (67) expression -> . ID
    (68) expression -> . array_access
    (69) expression -> . ID LPAREN expression COMMA expression RPAREN
    (70) expression -> . DOT_TRUE
    (71) expression -> . DOT_FALSE
    (60) array_access -> . ID LPAREN expression RPAREN

    LPAREN          shift and go to state 45
    NUMBER          shift and go to state 46
    ID              shift and go to state 43
    DOT_TRUE        shift and go to state 48
    DOT_FALSE       shift and go to state 49

    array_access                   shift and go to state 47
    expression                     shift and go to state 61

state 37

    (26) print_stmt -> PRINT TIMES . COMMA print_list

    COMMA           shift and go to state 62


state 38

    (27) read_stmt -> READ TIMES . COMMA read_list

    COMMA           shift and go to state 63


state 39
